update path structure
